--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 <body>
 
+<div class="dropdown">
+    <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        CHOOSE YOUR ITEM
+    </button> 
+
+    <div class="dropdown-menu" role="menu">
+        <a href="#" class="dropdown-item">ITEM1</a>
+        <a href="#" class="dropdown-item">ITEM1</a>
+        <a href="#" class="dropdown-item">ITEM1</a>
+        <a href="#" class="dropdown-item">ITEM1</a>
+        <div class="dropdown-divider"></div>
+        <a href="#" class="dropdown-item">ITEM2</a>
+        <a href="#" class="dropdown-item">ITEM2</a>
+        <a href="#" class="dropdown-item">ITEM2</a>
+        <a href="#" class="dropdown-item">ITEM2</a>
+    </div>
+</div>
+       
     
 
 
