--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+    <nav class="navbar navbar-expand-md navbar-light bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="Assets/images/LOGO1.png" alt="Logo"></a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navID">
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a href="#">Team</a> </li>
                     <li class="nav-item dropdown dropdown-toggle" data-toggle="dropdown"> <a href="#">connect</a> 
 
-                        <!--Dropdown-->
+                        <!--Dropdown inside navigation-->
                     <ul class="dropdown-menu">
                         <li class="nav-item "><a href="#">Home</a> </li>
                         <li class="nav-item"><a href="#">About</a> </li>
@@ -50,13 +50,121 @@
 
     <!--Image Slider-->
 
+    <div id="demo"  class="carousel slide" data-ride="carousel">
+
+        <!--carousel indicators inside Image Slider-->
+
+        <ul class="carousel-indicators">
+            <li data-target="#demo"  data-slide-to="0" class="active"></li>
+            <li data-target="#demo"  data-slide-to="1"></li>
+            <li data-target="#demo"  data-slide-to="2"></li>
+        </ul>
+
+        <!--carousel slideshow inside Image Slider-->
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Assets/images/pexels-element-digital-712319.jpg" alt="">
+                <div class="carousel-caption">
+                    <h1 class="display-2">bootstrap</h1>
+                    <h3> complete bootstrap tutorial</h3>
+                    <button type="button" class="btn btn-outline-light btn-lg">VIEW DEMO</button>
+                    <button type="button" class="btn btn-primary btn-lg">GET STARTED</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Assets/images/pexels-guillaume-meurice-1591447.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+                <img src="Assets/images/pexels-hoang-le-1042423.jpg" alt="">
+            </div>
+        </div>
+
+        <!--left and right control inside Image Slider-->
+
+        <a href="#demo" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#demo" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+
     <!--Jumbotron-->
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia maxime placeat distinctio, culpa beatae sapiente reiciendis iusto cupiditate voluptatem natus adipisci, atque odio quae ei`</p>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+                    <a href="#"><button class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
 
     <!--Welcome Section-->
 
+    <div class="container-fluid padding">
+        <div class="row text-center welcome">
+            <div class="col-12">
+                <h1 class="display-4">Built With Ease.</h1>
+            </div>
+            <hr class="my-2">
+            <div class="col-12">
+                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis similique numquam magni iusto facere cum! Quae. </p>
+            </div>
+        </div>
+       
+    </div>
+
     <!--Three colunm section-->
+    
+    <div class="container-fluid padding">
+        <div class="row padding text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <span class="fa fa-code"></span>
+                <h3>HTML5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis dis</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <span class="fa fa-bold"></span>
+                <h3>BOOSTRAP</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis dis</p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4">
+                <span class="fa fa-css3"></span>
+                <h3>CSS3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis dis</p>
+            </div>
+        </div>
+        <hr class="my-4">
+    </div>
 
     <!--two colunm section-->
+
+    <div class="container-fluid padding">
+        <div class="row padding">
+            <div class="col-lg-6">
+                <h2>Lets Builts it....</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis dis</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis disLorem ipsum dolor sit amet consectetur</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque blanditiis disLorem ipsum dolor sit</p>
+                <br>
+                <a href="#" class="btn btn-primary">Learn More</a>
+                <br><br>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-lg-6 col-md-12 img_left">
+                <img src="Assets/images/pexels-pixabay-255441.jpg" class="img-fluid img-thumbnail">
+            </div>
+
+    </div>
+    <br><br>
 
     <!--fixed background-->
 
