new branch feature

--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
 
     <!--fixed background-->
 
+    <div class="container-fluid padding">
+        <div class="row padding">
+            
+        </div>
+    </div>
+
     <!--Emoji section-->
 
     <!--meet the team-->
