--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
 
     <!--fixed background-->
 
-    <div class="container-fluid padding">
-        <div class="row padding">
-            
+    <figure>
+        <div class="fixed-wrap">
+            <div class="fixed">
+
+            </div>
         </div>
-    </div>
+    </figure>
 
     <!--Emoji section-->
 
