--- a/index.html
+++ b/index.html
@@ -178,6 +178,28 @@
 
     <!--Emoji section-->
 
+    <button class="fun btn-block" data-toggle="collapse" data-target="#emoji">  
+        click for fun
+    </button>
+
+    <div class="collapse" id="emoji">
+        <div class="container-fluid padding">
+            <div class="row padding">
+                <div class="gif col-sm-6 col-md-3">
+                    <img src="Assets/images/tenor.gif" alt="">
+                </div>
+                <div class="gif col-sm-6 col-md-3">
+                    <img src="Assets/images/giphy.gif" alt="">
+                </div>
+                <div class="gif col-sm-6 col-md-3">
+                    <img src="Assets/images/tenor-1.gif" alt="">
+                </div>
+                <div class="gif col-sm-6 col-md-3">
+                    <img src="Assets/images/image4.gif" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
     <!--meet the team-->
 
     <!--Cards-->
